@@ -44,6 +44,8 @@ public:
 
     virtual void GetBordersForSizer(int *borderTop, int *borderOther) const;
 
+    virtual void AddChild( wxWindowBase *child );
+
 protected:
     virtual bool GTKWidgetNeedsMnemonic() const;
     virtual void GTKWidgetDoSetMnemonic(GtkWidget* w);
